# TracePilot

./: .gitattributes  .gitignore  .unified-store-error-handling-plan.md  AUTHORS.md  BATCH_INSERT_OPTIMIZATION_REVIEW.md  BATCH_INSERT_QUICK_REFERENCE.md  BATCH_INSERT_TESTS.rs  BRANCH_REVIEW_SUMMARY.md  CHANGELOG.md  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  ERROR_STANDARDIZATION_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_REVISED.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  MANUAL_VALIDATION_CHECKLIST.md  MIGRATION_COMPLETE.md  QA_CHECKLIST.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PLAN_IMPROVEMENTS.md  REVIEW_CONSOLIDATION.md  REVIEW_INDEX.md  REVIEW_KEY_FINDINGS.md  REVISED_REFACTORING_PLAN.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SUBAGENT_REVIEWS.md  TESTING_CHECKLIST.md  USER_TESTING_CHECKLIST.md  USER_VALIDATION_CHECKLIST.md  audit.toml  b  b.rs  biome.json  cliff.toml  commit_msg.txt  (+17 more)
apps/desktop/src-tauri/: .tauri-updater-key.pub  Cargo.toml  README.md  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  main.json  viewer.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs  tracing_init.rs
crates/tracepilot-bench/: BASELINE.md  Cargo.toml  README.md
crates/tracepilot-bench/benches/: analytics.rs  batch_size.rs  indexer.rs  ipc_hot_path.rs  parsing.rs
crates/tracepilot-bench/src/: analytics.rs  builder.rs  events.rs  lib.rs  profiles.rs  workspace.rs
crates/tracepilot-cli/: Cargo.toml
crates/tracepilot-cli/src/: cli.rs  export_cmd.rs  import_cmd.rs  main.rs
crates/tracepilot-cli/tests/: cli_integration.rs
crates/tracepilot-core/: Cargo.toml  README.md
crates/tracepilot-core/examples/: context_prototype.rs
crates/tracepilot-core/src/: constants.rs  context_window.rs  error.rs  ids.rs  lib.rs  paths.rs  testing.rs  utils.rs
crates/tracepilot-core/src/analytics/: aggregator.rs  code_impact.rs  dashboard.rs  health.rs  loader.rs  mod.rs  test_helpers.rs  tools.rs  types.rs  utils.rs
crates/tracepilot-core/src/health/: mod.rs
crates/tracepilot-core/src/models/: conversation.rs  event_types.rs  mod.rs  session_summary.rs  tool_transaction.rs
crates/tracepilot-core/src/parsing/: checkpoints.rs  diagnostics.rs  events.rs  mod.rs  rewind_snapshots.rs  session_db.rs  workspace.rs
crates/tracepilot-core/src/session/: discovery.rs  mod.rs
crates/tracepilot-core/src/summary/: artifacts.rs  enrichment.rs  loader.rs  mod.rs  tests.rs  types.rs  workspace.rs
crates/tracepilot-core/src/turns/: ipc.rs  mod.rs  postprocess.rs  reconstructor.rs  repro_bug.rs  tests.rs  utils.rs
crates/tracepilot-core/src/utils/: backup.rs  cache.rs  fs.rs  log_sanitize.rs  mod.rs  sqlite.rs  sqlite.rs.orig
crates/tracepilot-core/tests/: version_parsing.rs
crates/tracepilot-export/: Cargo.toml  README.md
crates/tracepilot-export/examples/: spike_real_session.rs
crates/tracepilot-export/src/: builder.rs  content_filter.rs  document.rs  error.rs  json.rs  lib.rs  markdown.rs  options.rs  schema.rs  test_helpers.rs
crates/tracepilot-export/src/builder/: archive.rs  header.rs  mod.rs  session.rs
crates/tracepilot-export/src/import/: duplicate.rs  migrator.rs  mod.rs  options.rs  orchestrator.rs  parser.rs  tests.rs  types.rs  validator.rs  writer.rs
crates/tracepilot-export/src/redaction/: engine.rs  mod.rs  patterns.rs  policy.rs  primitives.rs  stats.rs  tests.rs
crates/tracepilot-export/src/render/: csv.rs  json.rs  markdown.rs  mod.rs
crates/tracepilot-export/tests/: export_json.rs  export_renderers.rs  import_roundtrip.rs  integration.rs  optional_sections.rs  redaction.rs
crates/tracepilot-indexer/: Cargo.toml  README.md
crates/tracepilot-indexer/src/: error.rs  index_db.rs  lib.rs
crates/tracepilot-indexer/src/index_db/: analytics_queries.rs  batch_insert.rs  helpers.rs  maintenance.rs  migrations.rs  mod.rs  open.rs  row_helpers.rs  search_reader.rs  search_writer.rs  session_reader.rs  session_writer.rs  types.rs
crates/tracepilot-indexer/src/indexing/: mod.rs  reindex.rs  search.rs
crates/tracepilot-orchestrator/: Cargo.toml  README.md  public-api-baseline.txt
crates/tracepilot-orchestrator/src/: config_injector.rs  error.rs  error_utils.rs  github.rs  json_io.rs  launcher.rs  launcher_sdk.rs  lib.rs  models.rs  process.rs  repo_registry.rs  templates.rs  tokens.rs  types.rs  utils.rs  validation.rs  version_manager.rs  worktrees.rs
crates/tracepilot-orchestrator/src/bridge/: discovery.rs  manager.rs  mod.rs
crates/tracepilot-orchestrator/src/config_injector/: copilot_config.rs
crates/tracepilot-orchestrator/src/launcher/: deps.rs  mod.rs  models.rs  paths.rs
crates/tracepilot-orchestrator/src/mcp/: config.rs  config_tests.rs  diff.rs  error.rs  headers.rs  health.rs  import.rs  mod.rs  types.rs  url_policy.rs
crates/tracepilot-orchestrator/src/presets/: io.rs  mod.rs  types.rs
crates/tracepilot-orchestrator/src/process/: encoding.rs  hidden.rs  mod.rs  terminal.rs  tests.rs  tests_async_limits.rs  timeout.rs
crates/tracepilot-orchestrator/src/skills/: assets.rs  discovery.rs  error.rs  import.rs  manager.rs  mod.rs  parser.rs  types.rs  writer.rs
crates/tracepilot-orchestrator/src/task_attribution/: mod.rs  tracker.rs
crates/tracepilot-orchestrator/src/task_context/: assembler.rs  budget.rs  mod.rs  sources.rs
crates/tracepilot-orchestrator/src/task_db/: error.rs  mod.rs  operations.rs  query_builder.rs  schema.rs  types.rs
crates/tracepilot-orchestrator/src/task_ipc/: mod.rs  monitor.rs  protocol.rs
crates/tracepilot-orchestrator/src/task_orchestrator/: launcher.rs  manifest.rs  mod.rs  prompt.rs  (+1 more)
crates/tracepilot-tauri-bindings/: Cargo.toml  README.md  build.rs
crates/tracepilot-tauri-bindings/src/: broadcast.rs  cache.rs  concurrency.rs  config.rs  db_helpers.rs  error.rs  events.rs  helpers.rs  ipc_command_names.rs  lib.rs  specta_exports.rs  types.rs  validators.rs
crates/tracepilot-test-support/: Cargo.toml  README.md
crates/tracepilot-test-support/src/: fixtures.rs  lib.rs
(+1593 files in other folders)
