[workspace]
resolver = "2"
members = [
    "crates/tracepilot-core",
    "crates/tracepilot-indexer",
    "crates/tracepilot-export",
    "crates/tracepilot-orchestrator",
    "crates/tracepilot-tauri-bindings",
    "crates/tracepilot-bench",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.6.2"
edition = "2024"
authors = ["Matt Shelton (@MattShelton04)"]
license = "GPL-3.0-or-later"
repository = "https://github.com/MattShelton04/TracePilot"
keywords = ["github-copilot", "cli", "tauri", "rust", "analytics"]
categories = ["development-tools", "visualization"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
rusqlite = { version = "0.32", features = ["bundled", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tempfile = "3"
strum = { version = "0.27", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
copilot-sdk = { git = "https://github.com/copilot-community-sdk/copilot-sdk-rust.git", rev = "2946ba1", package = "copilot-sdk" }
rayon = "1.10"
dashmap = "6"

# Internal crates
tracepilot-core = { path = "crates/tracepilot-core" }
tracepilot-indexer = { path = "crates/tracepilot-indexer" }
tracepilot-export = { path = "crates/tracepilot-export" }
tracepilot-orchestrator = { path = "crates/tracepilot-orchestrator" }

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
opt-level = 2

# ───────────────────────────────────────────────────────────────
# Workspace-wide lint configuration.
# Rust 1.74+ honours these. Individual crates can still override
# with their own [lints] block if needed, but the default posture
# is strict.
# ───────────────────────────────────────────────────────────────
[workspace.lints.rust]
unsafe_code = "forbid"
# rust_2024_compatibility = "warn"  # edition is already 2024
missing_debug_implementations = "allow"
unused_must_use = "warn"

[workspace.lints.clippy]
# Opinionated tightening — raise to "deny" once the baseline is clean.
unwrap_used = "warn"
expect_used = "warn"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
# Guardrails against common footguns.
map_err_ignore = "warn"
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
