[package]
name = "tracepilot-bench"
description = "Performance benchmarks for TracePilot Rust backend"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
tracepilot-core = { workspace = true }
tracepilot-indexer = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "analytics"
harness = false

[[bench]]
name = "indexer"
harness = false
