[package]
name = "tracepilot-core"
description = "Core library: session discovery, parsers, and derived models for Copilot CLI sessions"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
