[package]
name = "tracepilot-export"
description = "Export sessions to Markdown, JSON, or CSV with optional secret redaction"
version.workspace = true
edition.workspace = true

[dependencies]
tracepilot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
