[package]
name = "tracepilot-orchestrator"
description = "Orchestration capabilities: worktrees, session launching, config injection, version management"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
tracepilot-core = { path = "../tracepilot-core" }
tracepilot-export = { path = "../tracepilot-export" }
rusqlite = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

similar = "2"
walkdir = "2"
dashmap = { workspace = true }
sha2 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
