[package]
name = "tracepilot-orchestrator"
description = "Orchestration capabilities: worktrees, session launching, config injection, version management"
version.workspace = true
edition.workspace = true

# ── Cargo features ───────────────────────────────────────────────
# `copilot-sdk` — enables the optional `copilot-sdk` git dependency
#   plus all `#[cfg(feature = "copilot-sdk")]`-gated bridge code in
#   `src/bridge/manager/`. Default-on so normal builds include the
#   SDK bridge. `--no-default-features` compiles every bridge method
#   as a stub that returns `BridgeError::NotAvailable`, so the crate
#   stays shippable without the external git dep (useful for air-
#   gapped CI or bisecting SDK regressions).
[features]
default = ["copilot-sdk"]
copilot-sdk = ["dep:copilot-sdk"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
tracepilot-core = { path = "../tracepilot-core" }
tracepilot-export = { path = "../tracepilot-export" }
rusqlite = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

similar = "2"
walkdir = "2"
sha2 = { workspace = true }
url = "2"

copilot-sdk = { workspace = true, optional = true }

# Phase 1B.1 codegen pilot: derive `specta::Type` on `BridgeMetricsSnapshot`
# so tauri-specta can emit a TS mirror. Zero runtime cost.
specta = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
