[package]
name = "tracepilot-orchestrator"
description = "Orchestration capabilities: worktrees, session launching, config injection, version management"
version.workspace = true
edition.workspace = true

# The `copilot-sdk` git dependency is always compiled in — see
# ADR-0007. Availability at runtime is gated by the
# `FeaturesConfig.copilot_sdk` user preference via a reader threaded
# into `BridgeManager`; when the preference is off, bridge start
# methods return `BridgeError::DisabledByPreference`.

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
semver = { workspace = true }
tracepilot-core = { path = "../tracepilot-core" }
tracepilot-export = { path = "../tracepilot-export" }
rusqlite = { workspace = true }

tokio = { workspace = true }
reqwest = { workspace = true }

similar = "2"
walkdir = "2"
sha2 = { workspace = true }
url = "2"

copilot-sdk = { workspace = true }

# Phase 1B.1 codegen pilot: derive `specta::Type` on `BridgeMetricsSnapshot`
# so tauri-specta can emit a TS mirror. Zero runtime cost.
specta = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
