[package]
name = "tracepilot-tauri-bindings"
description = "Tauri IPC command layer bridging the frontend to tracepilot-core"
version.workspace = true
edition.workspace = true

[features]
default = ["copilot-sdk"]
copilot-sdk = ["tracepilot-orchestrator/copilot-sdk", "dep:copilot-sdk"]

[dependencies]
tracepilot-core = { workspace = true }
tracepilot-indexer = { workspace = true }
tracepilot-orchestrator = { workspace = true }
tracepilot-export = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "sync"] }
uuid = "1"
lru = "0.12"
reqwest = { workspace = true }
semver = { workspace = true }
copilot-sdk = { workspace = true, optional = true }

# Phase 1B.1 codegen pilot: specta derive on a tiny allow-list of types,
# plus the TS emitter used by the `gen-bindings` binary. The derive macro
# has zero runtime cost; `specta-typescript` is only pulled in by the
# `gen-bindings` bin path and is never linked into `init()` today.
specta = { workspace = true, features = ["derive"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
specta-typescript = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }

[build-dependencies]
# Embeds a Windows application manifest advertising Common-Controls v6
# so the `gen-bindings` codegen binary can load `comctl32.dll` imports
# dragged in by the `tauri`/`wry` dep graph. No-op on non-Windows.
embed-manifest = "1"
