[package]
name = "tracepilot-tauri-bindings"
description = "Tauri IPC command layer bridging the frontend to tracepilot-core"
version.workspace = true
edition.workspace = true

# The Copilot SDK is always compiled in — see ADR-0007. The runtime
# `FeaturesConfig.copilot_sdk` preference is honoured inside
# `BridgeManager`, which returns `BridgeError::DisabledByPreference`
# when the user toggle is off.

[dependencies]
tracepilot-core = { workspace = true }
tracepilot-indexer = { workspace = true }
tracepilot-orchestrator = { workspace = true }
tracepilot-export = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
lru = "0.12"
reqwest = { workspace = true }
semver = { workspace = true }
walkdir = "2"
zip = { version = "4", default-features = false, features = ["deflate-flate2-zlib-rs"] }

# Phase 1B.1 codegen pilot: specta derive on a tiny allow-list of types,
# plus the TS emitter used by the `gen-bindings` binary. The derive macro
# has zero runtime cost; `specta-typescript` is only pulled in by the
# `gen-bindings` bin path and is never linked into `init()` today.
specta = { workspace = true, features = ["derive"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }
specta-typescript = { workspace = true }

[dev-dependencies]
rusqlite = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
# Embeds a Windows application manifest advertising Common-Controls v6
# so the `gen-bindings` codegen binary can load `comctl32.dll` imports
# dragged in by the `tauri`/`wry` dep graph. No-op on non-Windows.
embed-manifest = "1"
