[package]
name = "tracepilot-desktop"
description = "TracePilot desktop application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tracepilot-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tracepilot-core = { workspace = true }
tracepilot-indexer = { workspace = true }
tracepilot-tauri-bindings = { path = "../../../crates/tracepilot-tauri-bindings" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
console-subscriber = { version = "0.4", optional = true }

[features]
# Enable tokio-console for async task debugging.
# NOTE: This replaces the tauri-plugin-log tracing bridge — Rust log output
# will go to tokio-console instead of the Tauri log file. Use only for
# async task profiling, not general debugging.
# Build: cargo tauri dev --features tokio-console
# Connect: tokio-console http://127.0.0.1:6669
tokio-console = ["dep:console-subscriber"]

[[bin]]
name = "tracepilot-desktop"
path = "src/main.rs"
