[package]
name = "tracepilot-desktop"
description = "TracePilot desktop application"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
default-run = "tracepilot-desktop"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tracepilot-core = { workspace = true }
tracepilot-indexer = { workspace = true }
tracepilot-tauri-bindings = { path = "../../../crates/tracepilot-tauri-bindings" }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-updater = { workspace = true }
log = "0.4"
console-subscriber = { version = "0.4", optional = true }

# ── Cargo features ───────────────────────────────────────────────
# `copilot-sdk` (default) — forwards to
#   `tracepilot-tauri-bindings/copilot-sdk`, which pulls in the full
#   SDK bridge chain (bindings → orchestrator → copilot-sdk git dep).
#   Disable with `--no-default-features` to produce a shippable
#   binary whose SDK bridge commands return `BridgeError::NotAvailable`.
# `tokio-console` (opt-in) — enables `console-subscriber` for async
#   task debugging. Replaces the `tauri-plugin-log` tracing bridge,
#   so Rust log output goes to tokio-console instead of the Tauri
#   log file. Use only for async profiling, not general debugging.
#   Build:   cargo tauri dev --features tokio-console
#   Connect: tokio-console http://127.0.0.1:6669
[features]
default = ["copilot-sdk"]
copilot-sdk = ["tracepilot-tauri-bindings/copilot-sdk"]
tokio-console = ["dep:console-subscriber"]

[[bin]]
name = "tracepilot-desktop"
path = "src/main.rs"
